--- a/instagram_clone01/Base.lproj/Main.storyboard
+++ b/instagram_clone01/Base.lproj/Main.storyboard
@@ -54,8 +54,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="w6i-Fp-fT6">
+                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="w6i-Fp-fT6">
                                 <rect key="frame" x="129" y="327" width="148.5" height="106"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Input the Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Qjs-8E-ibf">
                                         <rect key="frame" x="0.0" y="0.0" width="148.5" height="30"/>
@@ -88,19 +89,14 @@
                                     <action selector="signUp:" destination="gDc-iT-z8G" eventType="touchUpInside" id="SoZ-rP-ArZ"/>
                                 </connections>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="empty_user" translatesAutoresizingMaskIntoConstraints="NO" id="6xZ-Hb-yZp">
-                                <rect key="frame" x="153" y="103" width="100" height="224"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="empty_user" translatesAutoresizingMaskIntoConstraints="NO" id="6xZ-Hb-yZp">
+                                <rect key="frame" x="153" y="130" width="100" height="131"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="6xZ-Hb-yZp" firstAttribute="leading" secondItem="NnI-eY-dTM" secondAttribute="leading" constant="153" id="6Vk-H2-B8j"/>
-                            <constraint firstItem="NnI-eY-dTM" firstAttribute="trailing" secondItem="6xZ-Hb-yZp" secondAttribute="trailing" constant="161" id="Exz-VJ-HRz"/>
-                            <constraint firstItem="w6i-Fp-fT6" firstAttribute="top" secondItem="6xZ-Hb-yZp" secondAttribute="bottom" id="GqC-Eq-dhS"/>
                             <constraint firstAttribute="bottom" secondItem="Jm5-qh-UH1" secondAttribute="bottom" id="KLh-Xn-GXA"/>
-                            <constraint firstItem="NnI-eY-dTM" firstAttribute="trailing" secondItem="w6i-Fp-fT6" secondAttribute="trailing" constant="136.5" id="cmD-KM-bps"/>
-                            <constraint firstItem="w6i-Fp-fT6" firstAttribute="leading" secondItem="NnI-eY-dTM" secondAttribute="leading" constant="129" id="dZz-jV-PeA"/>
-                            <constraint firstItem="6xZ-Hb-yZp" firstAttribute="top" secondItem="NnI-eY-dTM" secondAttribute="top" constant="15" id="l0J-1r-0gr"/>
                             <constraint firstItem="Jm5-qh-UH1" firstAttribute="trailing" secondItem="NnI-eY-dTM" secondAttribute="trailing" id="sIA-E1-Zqw"/>
                             <constraint firstItem="Jm5-qh-UH1" firstAttribute="leading" secondItem="NnI-eY-dTM" secondAttribute="leading" id="svm-oI-T0d"/>
                         </constraints>
@@ -117,7 +113,7 @@
                         <outlet property="constraintToBottom" destination="KLh-Xn-GXA" id="m2D-fl-bTP"/>
                         <outlet property="emailTF" destination="Qjs-8E-ibf" id="24k-NP-87J"/>
                         <outlet property="passwordTF" destination="2Cz-PG-j2e" id="vVZ-Pt-784"/>
-                        <outlet property="profileImg" destination="6xZ-Hb-yZp" id="hax-px-v6d"/>
+                        <outlet property="profileImg" destination="6xZ-Hb-yZp" id="q1m-Er-7Tn"/>
                         <outlet property="usernameTF" destination="21F-Fx-E6o" id="SBh-E0-eJr"/>
                     </connections>
                 </viewController>
