--- a/instagram_clone01/Storyboards/Base.lproj/Main.storyboard
+++ b/instagram_clone01/Storyboards/Base.lproj/Main.storyboard
@@ -133,25 +133,30 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="725"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="xbr-wh-qYh">
-                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="itemSize" width="85" height="85"/>
                                     <size key="headerReferenceSize" width="50" height="200"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="uep-az-nwB" customClass="ProfileCollectionViewCell" customModule="instagram_clone01" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="200" width="50" height="50"/>
+                                        <rect key="frame" x="0.0" y="200" width="85" height="85"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="85" height="85"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tW9-e6-aRc">
-                                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="tW9-e6-aRc">
+                                                    <rect key="frame" x="0.0" y="0.0" width="85" height="85"/>
                                                 </imageView>
                                             </subviews>
                                         </view>
+                                        <constraints>
+                                            <constraint firstItem="tW9-e6-aRc" firstAttribute="leading" secondItem="uep-az-nwB" secondAttribute="leading" id="4O8-CU-Oof"/>
+                                            <constraint firstAttribute="trailing" secondItem="tW9-e6-aRc" secondAttribute="trailing" id="HK3-JR-bhi"/>
+                                            <constraint firstItem="tW9-e6-aRc" firstAttribute="top" secondItem="uep-az-nwB" secondAttribute="top" id="ZFT-3V-Kcg"/>
+                                            <constraint firstAttribute="bottom" secondItem="tW9-e6-aRc" secondAttribute="bottom" id="r8X-go-rnv"/>
+                                        </constraints>
                                         <connections>
                                             <outlet property="profileIconImg" destination="tW9-e6-aRc" id="hEf-Rz-EBf"/>
                                         </connections>
@@ -221,6 +226,7 @@
                                         </label>
                                     </subviews>
                                     <connections>
+                                        <outlet property="fallowBtn" destination="i7F-ep-JfT" id="rbn-CU-etv"/>
                                         <outlet property="myFallowingCount" destination="jPg-5b-KWp" id="x15-nS-kod"/>
                                         <outlet property="myFollowerCount" destination="pH3-qr-xLq" id="3e4-Gh-ivf"/>
                                         <outlet property="myPostCount" destination="Dq2-HW-Ju3" id="txI-4t-Z9I"/>
