--- a/instagram_clone01/Storyboards/Base.lproj/Main.storyboard
+++ b/instagram_clone01/Storyboards/Base.lproj/Main.storyboard
@@ -240,6 +240,9 @@
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="i7F-ep-JfT">
                                                     <rect key="frame" x="10" y="61.5" width="229" height="30"/>
                                                     <state key="normal" title="Edit Profile"/>
+                                                    <connections>
+                                                        <segue destination="VMi-8S-aOu" kind="show" id="1aB-oa-DZ1"/>
+                                                    </connections>
                                                 </button>
                                             </subviews>
                                             <constraints>
@@ -953,6 +956,168 @@
             </objects>
             <point key="canvasLocation" x="4756" y="2198"/>
         </scene>
+        <!--Setting Table View Controller-->
+        <scene sceneID="0nw-zf-eUf">
+            <objects>
+                <tableViewController id="VMi-8S-aOu" customClass="SettingTableViewController" customModule="instagram_clone01" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="a0i-6o-lJG">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <view key="tableHeaderView" contentMode="scaleToFill" id="Wcg-rP-IJO">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="185"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <subviews>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholderImg" translatesAutoresizingMaskIntoConstraints="NO" id="9nn-or-ycW">
+                                    <rect key="frame" x="167" y="52.5" width="80" height="80"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="80" id="F8f-8p-Wv4"/>
+                                        <constraint firstAttribute="width" constant="80" id="cd8-MP-LEi"/>
+                                    </constraints>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                            <integer key="value" value="40"/>
+                                        </userDefinedRuntimeAttribute>
+                                    </userDefinedRuntimeAttributes>
+                                </imageView>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x2x-Ws-YhJ">
+                                    <rect key="frame" x="134" y="147" width="146" height="30"/>
+                                    <state key="normal" title="Change Profile Photo"/>
+                                    <connections>
+                                        <action selector="changeProfilePhoto:" destination="VMi-8S-aOu" eventType="touchUpInside" id="gLP-NT-nBx"/>
+                                    </connections>
+                                </button>
+                            </subviews>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstItem="x2x-Ws-YhJ" firstAttribute="centerX" secondItem="Wcg-rP-IJO" secondAttribute="centerX" id="CUY-ob-GGe"/>
+                                <constraint firstItem="x2x-Ws-YhJ" firstAttribute="top" secondItem="9nn-or-ycW" secondAttribute="bottom" constant="14.5" id="TaB-TW-mxg"/>
+                                <constraint firstItem="9nn-or-ycW" firstAttribute="centerX" secondItem="Wcg-rP-IJO" secondAttribute="centerX" id="bAt-7D-fj6"/>
+                                <constraint firstItem="9nn-or-ycW" firstAttribute="centerY" secondItem="Wcg-rP-IJO" secondAttribute="centerY" id="rn8-mv-F4T"/>
+                            </constraints>
+                        </view>
+                        <sections>
+                            <tableViewSection id="efa-pd-qj7">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="Aqc-uz-EBP">
+                                        <rect key="frame" x="0.0" y="185" width="414" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Aqc-uz-EBP" id="RG0-Fd-Wiw">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1KU-gd-o9P">
+                                                    <rect key="frame" x="15" y="5" width="384" height="33.5"/>
+                                                    <nil key="textColor"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                </textField>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="1KU-gd-o9P" secondAttribute="trailing" constant="15" id="6Hn-GR-Tdy"/>
+                                                <constraint firstItem="1KU-gd-o9P" firstAttribute="leading" secondItem="RG0-Fd-Wiw" secondAttribute="leading" constant="15" id="AsE-gc-Gry"/>
+                                                <constraint firstAttribute="bottom" secondItem="1KU-gd-o9P" secondAttribute="bottom" constant="5" id="KWr-21-lIX"/>
+                                                <constraint firstItem="1KU-gd-o9P" firstAttribute="top" secondItem="RG0-Fd-Wiw" secondAttribute="top" constant="5" id="dUh-OR-xXR"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="76R-Na-E3Y">
+                                        <rect key="frame" x="0.0" y="229" width="414" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="76R-Na-E3Y" id="m3y-0l-jYs">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="O34-sF-WT8">
+                                                    <rect key="frame" x="15" y="5" width="384" height="33.5"/>
+                                                    <nil key="textColor"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                </textField>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="O34-sF-WT8" firstAttribute="leading" secondItem="m3y-0l-jYs" secondAttribute="leading" constant="15" id="epk-uD-pJ5"/>
+                                                <constraint firstAttribute="bottom" secondItem="O34-sF-WT8" secondAttribute="bottom" constant="5" id="fUa-cd-vdV"/>
+                                                <constraint firstAttribute="trailing" secondItem="O34-sF-WT8" secondAttribute="trailing" constant="15" id="oaX-g3-Ic0"/>
+                                                <constraint firstItem="O34-sF-WT8" firstAttribute="top" secondItem="m3y-0l-jYs" secondAttribute="top" constant="5" id="tuJ-0c-6sb"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                            <tableViewSection id="fut-Jn-tws">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="gsV-k7-ivu">
+                                        <rect key="frame" x="0.0" y="309" width="414" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="gsV-k7-ivu" id="CuT-gm-bh5">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MCI-RI-XWw">
+                                                    <rect key="frame" x="82" y="7" width="250" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="250" id="6g1-AM-dBH"/>
+                                                    </constraints>
+                                                    <state key="normal" title="Save">
+                                                        <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    </state>
+                                                </button>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="MCI-RI-XWw" firstAttribute="centerY" secondItem="CuT-gm-bh5" secondAttribute="centerY" id="Jyc-J7-zti"/>
+                                                <constraint firstItem="MCI-RI-XWw" firstAttribute="centerX" secondItem="CuT-gm-bh5" secondAttribute="centerX" id="d3e-U9-aEr"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                            <tableViewSection id="SFQ-LP-7Nx">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="q89-rF-37E">
+                                        <rect key="frame" x="0.0" y="389" width="414" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="q89-rF-37E" id="KDj-Ua-PSM">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZtV-xG-Kc8">
+                                                    <rect key="frame" x="82" y="7" width="250" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="250" id="rMA-Yd-oHe"/>
+                                                    </constraints>
+                                                    <state key="normal" title="Log Out">
+                                                        <color key="titleColor" red="1" green="0.11181766" blue="0.16213396099999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                    </state>
+                                                    <connections>
+                                                        <action selector="logOutBtn:" destination="VMi-8S-aOu" eventType="touchUpInside" id="BdW-P6-Ys0"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="ZtV-xG-Kc8" firstAttribute="centerY" secondItem="KDj-Ua-PSM" secondAttribute="centerY" id="25K-Tj-mDd"/>
+                                                <constraint firstItem="ZtV-xG-Kc8" firstAttribute="centerX" secondItem="KDj-Ua-PSM" secondAttribute="centerX" id="qTZ-f7-QXt"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                        </sections>
+                        <connections>
+                            <outlet property="dataSource" destination="VMi-8S-aOu" id="fyH-Qv-GfO"/>
+                            <outlet property="delegate" destination="VMi-8S-aOu" id="oH4-US-4Ov"/>
+                        </connections>
+                    </tableView>
+                    <connections>
+                        <outlet property="emailTextField" destination="O34-sF-WT8" id="MRS-Pg-oBH"/>
+                        <outlet property="nameTextField" destination="1KU-gd-o9P" id="hvM-IX-V8l"/>
+                        <outlet property="profileImg" destination="9nn-or-ycW" id="t2g-8J-MKA"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eDY-Eu-fpv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5635" y="-656"/>
+        </scene>
     </scenes>
     <resources>
         <image name="Comment" width="43" height="41"/>
@@ -965,6 +1130,7 @@
         <image name="empty_user" width="224" height="224"/>
         <image name="like" width="46" height="41"/>
         <image name="placeholder-photo" width="840" height="600"/>
+        <image name="placeholderImg" width="225" height="225"/>
         <image name="share" width="37" height="41"/>
     </resources>
 </document>
