SettingTableViewController 유저정보 수정하기
AuthService func 추가 및 SettingTableViewController 수정

--- a/instagram_clone01/Storyboards/Base.lproj/Main.storyboard
+++ b/instagram_clone01/Storyboards/Base.lproj/Main.storyboard
@@ -1008,6 +1008,9 @@
                                             <subviews>
                                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1KU-gd-o9P">
                                                     <rect key="frame" x="15" y="5" width="384" height="33.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="33.5" id="igc-JZ-hXn"/>
+                                                    </constraints>
                                                     <nil key="textColor"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits"/>
@@ -1030,6 +1033,9 @@
                                             <subviews>
                                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="O34-sF-WT8">
                                                     <rect key="frame" x="15" y="5" width="384" height="33.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="33.5" id="NkD-Y8-RIi"/>
+                                                    </constraints>
                                                     <nil key="textColor"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits"/>
@@ -1062,6 +1068,9 @@
                                                     <state key="normal" title="Save">
                                                         <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     </state>
+                                                    <connections>
+                                                        <action selector="saveBtnTapped:" destination="VMi-8S-aOu" eventType="touchUpInside" id="oWi-P3-DLf"/>
+                                                    </connections>
                                                 </button>
                                             </subviews>
                                             <constraints>
